feat: Spring Boot 백엔드 인증 시스템 구현
- JWT 인증 기반 로그인/회원가입 API 구현
- Spring Security 설정 추가
- 사용자 엔티티 및 서비스 로직 구현
- JWT 토큰 생성 및 검증 유틸리티 추가
- Gradle 설정 오류 수정 (Java Toolchain 설정)

--- a/childcare/src/main/resources/application.properties
+++ b/childcare/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-# ?? ?? ??
-server.port=8080
+# \uC11C\uBC84 \uD3EC\uD2B8 \uC124\uC815
+server.port=8085
 
-# H2 ?????? ?? (???)
+# H2 \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC124\uC815 (\uAC1C\uBC1C\uC6A9)
 spring.datasource.url=jdbc:h2:mem:idadb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -9,15 +9,15 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# JPA ??
+# JPA \uC124\uC815
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# JWT ?? (??? ??)
+# JWT \uC124\uC815 (\uB098\uC911\uC5D0 \uC0AC\uC6A9)
 jwt.secret=ida-secret-key-for-secure-jwt-token-generation
 jwt.expiration=86400000
 
-# ?? ??
+# \uB85C\uAE45 \uC124\uC815
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
