--- a/childcare/src/main/resources/application.properties
+++ b/childcare/src/main/resources/application.properties
@@ -1,23 +1,25 @@
-# \uC11C\uBC84 \uD3EC\uD2B8 \uC124\uC815
+# ?? ?? ??
 server.port=8085
 
-# H2 \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC124\uC815 (\uAC1C\uBC1C\uC6A9)
-spring.datasource.url=jdbc:h2:mem:idadb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# MySQL ?????? ??
+spring.datasource.url=jdbc:mysql://localhost:3306/ida_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=admin
+spring.datasource.password=admin1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA \uC124\uC815
+# JPA ??
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# JWT \uC124\uC815 (\uB098\uC911\uC5D0 \uC0AC\uC6A9)
+# H2 ?? ????
+spring.h2.console.enabled=false
+
+# JWT ??
 jwt.secret=ida-secret-key-for-secure-jwt-token-generation
 jwt.expiration=86400000
 
-# \uB85C\uAE45 \uC124\uC815
+# ?? ??
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
