--- a/ida_app/pubspec.yaml
+++ b/ida_app/pubspec.yaml
@@ -2,7 +2,7 @@ name: ida_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -33,7 +33,20 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons:
+    ^1.0.8
+
+    # 네트워크 통신
+  dio: ^5.1.1 # HTTP 클라이언트
+
+  # 상태 관리
+  provider: ^6.0.5 # 상태 관리
+
+  # 로컬 저장소
+  flutter_secure_storage: ^8.0.0 # 토큰 안전하게 저장
+
+  # UI 관련
+  flutter_spinkit: ^5.2.0 # 로딩 인디케이터
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +64,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
