--- a/childcare/src/main/resources/application.properties
+++ b/childcare/src/main/resources/application.properties
@@ -23,3 +23,6 @@ jwt.expiration=86400000
 # ?? ??
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
