--- a/childcare/build.gradle
+++ b/childcare/build.gradle
@@ -44,6 +44,9 @@ dependencies {
 
 	// 이메일 전송
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	// Swagger UI
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 }
 
 tasks.named('test') {
