--- a/childcare/src/main/resources/application.properties
+++ b/childcare/src/main/resources/application.properties
@@ -26,3 +26,4 @@ logging.level.org.hibernate.SQL=DEBUG
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
