--- a/childcare/src/main/resources/application.properties
+++ b/childcare/src/main/resources/application.properties
@@ -1,29 +1,62 @@
-# ?? ?? ??
+# \uC11C\uBC84 \uD3EC\uD2B8 \uC124\uC815
 server.port=8085
 
-# MySQL ?????? ??
+# MySQL \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC124\uC815
 spring.datasource.url=jdbc:mysql://localhost:3306/ida_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=admin
 spring.datasource.password=admin1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA ??
+# JPA \uC124\uC815
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# H2 ?? ????
+# H2 \uCF58\uC194 \uBE44\uD65C\uC131\uD654
 spring.h2.console.enabled=false
 
-# JWT ??
+# JWT \uC124\uC815
 jwt.secret=ida-secret-key-for-secure-jwt-token-generation
 jwt.expiration=86400000
 
-# ?? ??
+# \uB85C\uAE45 \uC124\uC815
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+# OAuth2 \uC124\uC815
+# Google OAuth2 \uC124\uC815
+spring.security.oauth2.client.registration.google.client-id=your-google-client-id
+spring.security.oauth2.client.registration.google.client-secret=your-google-client-secret
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+# Kakao OAuth2 \uC124\uC815
+spring.security.oauth2.client.registration.kakao.client-id=your-kakao-client-id
+spring.security.oauth2.client.registration.kakao.client-secret=your-kakao-client-secret
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
+spring.security.oauth2.client.registration.kakao.client-name=Kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
+
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
+# Naver OAuth2 \uC124\uC815
+spring.security.oauth2.client.registration.naver.client-id=your-naver-client-id
+spring.security.oauth2.client.registration.naver.client-secret=your-naver-client-secret
+spring.security.oauth2.client.registration.naver.scope=name,email
+spring.security.oauth2.client.registration.naver.client-name=Naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/login/oauth2/code/naver
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
