feat: 소셜 로그인(Google, Kakao, Naver) 기본 구현
- 소셜 로그인 application.properties key값 수정 / 설정 변경 예정

소셜 로그인 기본 연결은 완료했으나 성공 처리 로직에 문제가 있어 Whitelabel Error Page가 표시됨
해당 이슈는 수정 예정

--- a/childcare/src/main/resources/application.properties
+++ b/childcare/src/main/resources/application.properties
@@ -30,13 +30,13 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 # OAuth2 \uC124\uC815
 # Google OAuth2 \uC124\uC815
-spring.security.oauth2.client.registration.google.client-id=your-google-client-id
-spring.security.oauth2.client.registration.google.client-secret=your-google-client-secret
+spring.security.oauth2.client.registration.google.client-id=527443014683-11l9c5e6n79uet9siv4069eemqug9mkq.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 
 # Kakao OAuth2 \uC124\uC815
-spring.security.oauth2.client.registration.kakao.client-id=your-kakao-client-id
-spring.security.oauth2.client.registration.kakao.client-secret=your-kakao-client-secret
+spring.security.oauth2.client.registration.kakao.client-id=fd3b543bac0affd0b6e29a913235379b
+spring.security.oauth2.client.registration.kakao.client-secret=yBAuTsfECcJLEMsTLr4TQ029BU4eO9kPF
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
 spring.security.oauth2.client.registration.kakao.client-name=Kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
@@ -49,8 +49,8 @@ spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.co
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 
 # Naver OAuth2 \uC124\uC815
-spring.security.oauth2.client.registration.naver.client-id=your-naver-client-id
-spring.security.oauth2.client.registration.naver.client-secret=your-naver-client-secret
+spring.security.oauth2.client.registration.naver.client-id=x76IPMVHE9lZKiM44Djy
+spring.security.oauth2.client.registration.naver.client-secret=kAU0hUURK8
 spring.security.oauth2.client.registration.naver.scope=name,email
 spring.security.oauth2.client.registration.naver.client-name=Naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
