--- a/ida_app/pubspec.yaml
+++ b/ida_app/pubspec.yaml
@@ -29,26 +29,30 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
-    sdk: flutter
+    sdk: flutter # Flutter SDK 기본 종속성
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons:
-    ^1.0.8
+  cupertino_icons: ^1.0.8 # iOS 스타일의 아이콘을 제공하는 패키지
 
-    # 네트워크 통신
-  dio: ^5.1.1 # HTTP 클라이언트
+  # 네트워크 통신
+  dio: ^5.1.1 # 고급 HTTP 클라이언트 라이브러리, 인터셉터, 포맷터 등 제공
 
   # 상태 관리
-  provider: ^6.0.5 # 상태 관리
+  provider: ^6.0.5 # 상태 관리 패키지, InheritedWidget 기반의 종속성 주입과 상태 공유
 
   # 로컬 저장소
-  flutter_secure_storage: ^8.0.0 # 토큰 안전하게 저장
+  flutter_secure_storage: ^8.0.0 # 보안 저장소, 토큰 등 민감한 정보 저장에 사용
 
   # UI 관련
-  flutter_spinkit: ^5.2.0 # 로딩 인디케이터
-  http: ^1.3.0
-  shared_preferences: ^2.2.0
+  flutter_spinkit: ^5.2.0 # 다양한 스타일의 로딩 인디케이터(스피너) 제공
+
+  http: ^1.3.0 # 기본 HTTP 요청 패키지
+  shared_preferences: ^2.2.0 # 키-값 쌍으로 간단한 데이터 저장을 위한 패키지
+
+  flutter_web_auth: ^0.5.0 # 웹 인증 흐름을 처리하기 위한 패키지, OAuth 인증에 유용
+  url_launcher: ^6.1.10 # URL을 열기 위한 패키지, 외부 브라우저나 앱 실행에 사용
+  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
