--- a/ida_app/.gitignore
+++ b/ida_app/.gitignore
@@ -43,3 +43,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# 민감한 설정 파일
+application-secrets.properties
+**/application-secrets.properties
+**/src/main/resources/application-secrets.properties
