--- a/ida_app/pubspec.yaml
+++ b/ida_app/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   # UI 관련
   flutter_spinkit: ^5.2.0 # 다양한 스타일의 로딩 인디케이터(스피너) 제공
 
+  intl: ^0.18.0 # 날짜 포맷팅
+
   http: ^1.3.0 # 기본 HTTP 요청 패키지
   shared_preferences: ^2.2.0 # 키-값 쌍으로 간단한 데이터 저장을 위한 패키지
 
@@ -76,10 +78,21 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  # 애셋 설정
   assets:
+    - assets/
     - assets/icons/
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/images/
+
+  # 폰트 설정
+  fonts:
+    - family: NotoSansKR
+      fonts:
+        - asset: assets/fonts/NotoSansKR-Regular.ttf
+        - asset: assets/fonts/NotoSansKR-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/NotoSansKR-Bold.ttf
+          weight: 700
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
